--- a/code/index.html
+++ b/code/index.html
@@ -16,10 +16,10 @@
     <header>
       <section class="header-section1">
         <h1 data-aos-duration="1900" data-aos="fade-down">Navorn.</h1>
-        <nav data-aos-duration="1900" data-aos="fade-down" class="menu">
-          <p>Home</p>
-          <p>Pages</p>
-          <p>Portfolio</p>
+        <nav class="menu">
+          <p class="home"><a href="./index.html">Home</a></p>
+          <p><a href="./aboutme.html">About me</a></p>
+          <p>Page</p>
           <p>Blog</p>
           <p>Coding</p>
           <p>Elements</p>
@@ -366,6 +366,7 @@
         <div class="content">
           <p>seangnavorn37@email.com</p>
           <p>+855-1236-2349-34</p>
+          <p><a title="about me" href="./aboutme.html">more information about me</a></p>
         </div>
         <div class="social">
           <i class="fa-brands fa-facebook" style="color: #74c0fc"></i>
