one more responsive

--- a/code/aboutme.html
+++ b/code/aboutme.html
@@ -17,7 +17,7 @@
         <h1 data-aos-duration="1900" data-aos="fade-down">Navorn.</h1>
         <ul class="menu">
           <li><a href="./index.html">Home</a></li>
-          <li class="about"><a href="./aboutme.html">About me</a></li>
+          <li class="about"><a href="./aboutme.html">About</a></li>
           <li>Page</li>
           <li>Blog</li>
           <li>Coding</li>
