--- a/code/index.html
+++ b/code/index.html
@@ -18,7 +18,7 @@
         <h1 data-aos-duration="1900" data-aos="fade-down">Navorn.</h1>
         <nav class="menu">
           <p class="home"><a href="./index.html">Home</a></p>
-          <p><a href="./aboutme.html">About me</a></p>
+          <p><a href="./aboutme.html">About</a></p>
           <p>Page</p>
           <p>Blog</p>
           <p>Coding</p>
