finish responsive about me

--- a/code/aboutme.html
+++ b/code/aboutme.html
@@ -42,7 +42,7 @@
           </p>
           <p>
             My name is <span>Seang Navorn</span> and I'm a collage student. I study in major
-            Computer Science. I study <span>computer science</span> and enjoy using
+           <span>Computer Science</span>. I study computer science and enjoy using
             technology to solve problems and build new things. I am learning
             computer science because I like working with computers and creating
             useful programs.
@@ -58,7 +58,7 @@
             I graduated highschool in 2023 and I start to interest with
             Technology since I was study in grade 11. I want to know about tech
             and digital I try to research alot. In the future I want to be a
-            software devoloper that can participate devolop tech and help
+            software developer that can participate develop tech and help
             sharing experiences to people that want to know about tect industry.
             Try hard dream big.
           </p>
@@ -70,7 +70,7 @@
             things work behind the scenes. I also write a blog where I share
             what I learn about coding. It helps me remember what I've learned
             and connect with others who are interested in the same things. I
-            also like go traveling and go camping because I love to do newthing
+            also like go traveling and go camping because I love to do news thing,
             I like to stay with natural that can make me reduce stress and
             fresh.
           </p>
@@ -100,7 +100,7 @@
             At <a href="">www.navornsharing.com</a>, we blend coding, travel,
             and creativity to inspire innovation. Whether you're a developer,
             adventurer, or creator, we provide the resources and community to
-            help you learn, explore, and grow. Join us as we code, travel, and
+            help your learn, explore, and grow. Join us as we code, travel, and
             create a better future together!
           </p>
         </div>
